# PTB_XL

./: .gitignore  AGENTS.md  CODEX_GUIDED_ENVIRONMENT_SETUP.md  PTBXL_PROJECT_CONTEXT_AND_PLAN.md  README.md  SETUP_PROGRESS.md  pyproject.toml
.github/workflows/: quality.yml
data/: ptbxl_metadata_manifest.json  ptbxl_scp_statements_manifest.json
docs/context/: DECISIONS.md  STATUS.md
docs/context/missions/: 001_metadata_official_splits.md  002_verify_real_metadata.md  003_build_diagnostic_superclass_labels.md  004_define_five_superclass_cohort.md  005_load_audit_lr_signals.md
reports/cohort/: ptbxl_v1.0.3_five_superclass_cohort_summary.json
reports/labels/: ptbxl_v1.0.3_superclass_summary.json
reports/metadata/: ptbxl_v1.0.3_summary.json
reports/signals/: ptbxl_v1.0.3_lr_signal_audit.json
scripts/: audit_lr_signals.py  build_modeling_cohort.py  build_superclass_labels.py  validate_metadata.py
src/ptbxl/: __init__.py
src/ptbxl/data/: __init__.py  cohort.py  labels.py  metadata.py  reporting.py  signals.py
tests/: test_import.py
tests/data/: test_cohort.py  test_labels.py  test_metadata.py  test_metadata_report.py  test_signals.py
