[project]
name = "ptbxl-ml-system"
version = "0.1.0"
description = "Production-oriented ECG classification system using PTB-XL"
readme = "README.md"
authors = [
    { name = "Luis", email = "208981616+luissm01@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "wfdb>=4.3.1",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ptbxl"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
